# libperl-macrogen

./: .gitignore  CLAUDE.md  Cargo.toml  Project.md  README.md  apidoc-import.zsh  build.rs  categorize-help-diags.tcl
apidoc/: common.patches.json  v5.10.json  v5.12.json  v5.14.json  v5.16.json  v5.18.json  v5.20.json  v5.22.json  v5.24.json  v5.26.json  v5.26.patches.json  v5.28.json  v5.28.patches.json  v5.30.json  v5.30.patches.json  v5.32.json  v5.32.patches.json  v5.34.json  v5.34.patches.json  v5.36.json  v5.36.patches.json  v5.38.json  v5.40.json  v5.40.patches.json  v5.42.json
doc/: architecture-apidoc-patches.md  architecture-fields-dict.md  architecture-inline-function-processing.md  architecture-macro-expansion-control.md  architecture-overview.md  architecture-rust-codegen.md  architecture-semantic-type-inference.md  architecture-thx-dependency.md  architecture-type-inference-and-cast.md  c_integer_size_macros.md  dynamic-field-type-inference.md  handoff-to-downstream.md  keyword-refactoring-plan.md  macro-expansion-tracking-v3.md  macro-to-rust-plan.md  macrogen-flow.md  operations-apidoc-release.md  parse-macro-optimization-plan.md  perl-apidoc-format.md  reference-cli-usage.md  reference-codegen-rules.md  reference-implemented-features.md  rust-migration-guide.md  tccgen-functions.md  tccpp-functions.md  tinycc-analysis.md  tinycc_type_declaration.md  verification-non-threaded-build.md
samples/: bindings.rs  test_attribute.c  test_attribute2.c  test_attribute3.c  test_byteswap.c  test_inc_a.h  test_inc_b.h  test_macro.c  test_macro2.c  test_macro3.c  test_macro4.c  test_macro_after_include.c  test_macro_scope.c  test_nested_macro.c  test_op_reg.c  test_op_reg2.c  test_parse.c  test_parse2.c  test_paste.c  test_paste_cmdline.c  test_perl_like.c  test_simple_typedef.c  test_std_type.c  test_std_type2.c  test_stubs.c  test_uintmax.c  test_uintmax2.c  test_unsigned.c  test_wordsize.c  test_x86_64.c
src/: apidoc.rs  apidoc_data.rs  apidoc_patches.rs  ast.rs  c_fn_decl.rs  call_type_infer.rs  enum_dict.rs  error.rs  fields_dict.rs  global_const_dict.rs  infer_api.rs  inline_fn.rs  intern.rs  iterative_infer.rs  lexer.rs  lib.rs  macro_analysis.rs  macro_analyzer2.rs  macro_def.rs  macro_infer.rs  macrogen.rs  main.rs  parser.rs  perl_config.rs  perlvar_dict.rs  perlvar_emitter.rs  pipeline.rs  pp_expr.rs  preprocessor.rs  rust_codegen.rs  rust_decl.rs  semantic.rs  sexp.rs  source.rs  struct_emitter.rs  (+10 more)
(+190 files in other folders)
