[package]
name = "libperl-macrogen"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
quote = "1.0.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0.111", features = ["full", "parsing"] }

[dev-dependencies]
tempfile = "3"
