[package]
name = "libperl-macrogen"
version = "0.1.2"
edition = "2024"
description = "Generate Rust FFI bindings from C macro functions in Perl headers"
license = "LGPL-2.1"
repository = "https://github.com/hkoba/libperl-macrogen"
keywords = ["perl", "ffi", "macro", "bindgen", "codegen"]
categories = ["development-tools::ffi", "parsing"]
exclude = [
    "apidoc/",
    "tinycc/",
    "doc/",
    "samples/",
    "tmp/",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
quote = "1.0.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0.111", features = ["full", "parsing"] }

# Runtime dependencies for apidoc extraction
flate2 = "1.0"
tar = "0.4"

[build-dependencies]
ureq = "2.9"

[dev-dependencies]
tempfile = "3"
