[package]
name = "libperl-macrogen"
version = "0.1.6"
edition = "2024"
description = "Generate Rust FFI bindings from C macro functions in Perl headers"
license = "LGPL-2.1-or-later"
repository = "https://github.com/hkoba/libperl-macrogen"
keywords = ["perl", "ffi", "macro", "bindgen", "codegen"]
categories = ["development-tools::ffi", "parsing"]
exclude = [
    # Bulky non-source assets that are reconstructed at build time or
    # genuinely not user-facing.
    "apidoc/",
    "tinycc/",
    "doc/",
    "samples/",
    "tmp/",
    # Internal development-only files: Claude Code instructions,
    # planning docs, dev scripts, profiling artifacts.
    "CLAUDE.md",
    "Project.md",
    "TODO.md",
    "tools/",
    "apidoc-import.zsh",
    "categorize-help-diags.tcl",
    "*.pdf",
    "perf.data*",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1.0"
prettyplease = "0.2"
quote = "1.0.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0.111", features = ["full", "parsing"] }

# Runtime dependencies for apidoc extraction
flate2 = "1.0"
tar = "0.4"

[build-dependencies]
ureq = "2.9"

[dev-dependencies]
tempfile = "3"
